--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
 001/.idea
 001/venv
+002/.idea
+002/venv
+003/.idea
+003/venv
+004/.idea
+004/venv
+005/.idea
+005/venv
+006/.idea
+006/venv
+007/.idea
+007/venv
+008/.idea
+008/venv
+009/.idea
+009/venv
+010/.idea
+010/venv
